--- a/yamls/ocp/route.yaml
+++ b/yamls/ocp/route.yaml
@@ -1,13 +1,32 @@
-apiVersion: route.openshift.io/v1
-kind: Route
+apiVersion: networking.k8s.io/v1
+kind: Ingress
 metadata:
-  labels:
-    app: ui
   name: ui
+  namespace: tekton-argocd
+  annotations:
+    kubernetes.io/ingress.class: traefik
+    traefik.ingress.kubernetes.io/router.entrypoints: websecure
+    # cert-manager.io/cluster-issuer: letsencrypt-prod
+    # ingress.kubernetes.io/auth-type: forward
+    # ingress.kubernetes.io/auth-url: http://traefik-forward-auth.keycloak.svc.cluster.local:4181
+    # ingress.kubernetes.io/auth-response-headers: X-Forwarded-User
+    # traefik.ingress.kubernetes.io/router.entrypoints: auth-http
+    # traefik.ingress.kubernetes.io/router.middlewares: keycloak-traefik-forward-auth@kubernetescrd
 spec:
-  port:
-    targetPort: http
-  to:
-    kind: Service
-    name: ui
-    weight: 100
+  # tls:
+  # - secretName: star-k3s-dedyn-io-tls
+  #     hosts:
+  #       - k3s.dedyn.io
+  #       - whoami.k3s.dedyn.io
+  #       - oauth.k3s.dedyn.io
+  rules:
+  - host: tutorial.k3s.dedyn.io
+    http:
+      paths:
+        - path: /
+          pathType: Prefix
+          backend:
+            service:
+              name: ui
+              port:
+                number: 80
