--- a/yamls/ocp/deployment.yaml
+++ b/yamls/ocp/deployment.yaml
@@ -17,7 +17,7 @@ spec:
         version: v1
     spec:
       containers:
-        - image: registry-service.private-registry.svc.cluster.local:5000/tekton-argocd/app:04d1ed8
+        - image: registry.local:5000/tekton-argocd/app:60002fc
           imagePullPolicy: Always
           name: ui
           ports:
